_sass/_tags.scss
$theme-color: darkgray;
$font-sans: "Ubuntu", Helvetica, Arial, sans-serif;
$font-font-awesome: FontAwesome;
$post-date-color: #9a9a9a;

.post-tag {
  display: inline-block;
  background: rgba($theme-color, 0.15);
  padding: 0 .5rem;
  margin-right: .5rem;
  border-radius: 4px;
  color: $theme-color;
  font-family: $font-sans;
  font-size: 90%;
  &:before {
    content: "\f02b";
    font-family: $font-font-awesome;
    padding-right: .5em;
  }
  &:hover {
    text-decoration: none;
    background: $theme-color;
    color: $white;
  }
}

.archive {

    .tags-expo {
      :target:before {
          float: left;
        content:"";
        display:inline-block;
        height:72px; /* fixed header height*/
        margin:-72px 0 0; /* negative fixed header height */
      }
      .tags-expo-list {
        @media (min-width: 38em) {
          font-size: 0.9rem;
          .post-tag {
            margin: .2em .3em;
          }
        }
      }
      .tags-expo-section {
        float: left;
        width: 50%;
        ul {
          list-style-type: circle;
          list-style-position: inside;
          padding: 0;
          li {
            padding: 0;
            &:hover {
              list-style-type: disc;
              padding: 0 .5rem;
            }
          }
        }
        a {
          text-decoration: none;
        }
        .post-date {
          display: inline-block;
          font-size: 80%;
          color: $post-date-color;
          margin: 0;
          padding: 0;
        }
        font-family: $font-sans;
      }

      .archive-expo-section {
        float: right;
        width: 50%;
        ul {
          list-style-type: circle;
          list-style-position: inside;
          padding: 0;
          li {
            padding: 0;
            &:hover {
              list-style-type: disc;
              padding: 0 .5rem;
            }
          }
        }
        a {
          text-decoration: none;
        }
        .post-date {
          display: inline-block;
          font-size: 80%;
          color: $post-date-color;
          margin: 0;
          padding: 0;
        }
        font-family: $font-sans;
      }
    }
}

